--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -70,6 +70,7 @@ collaborators:
   - &zenoix zenoix
   - &NekoDrone NekoDrone
   - &adamperkowski adamperkowski
+  - &ImenaOphelia ImenaOphelia
 
 userstyles:
   advent-of-code:
@@ -109,6 +110,13 @@ userstyles:
         name: AniChart
         link: https://anichart.net
     current-maintainers: [*AnubisNekhet]
+  anonymous-overflow:
+    name: Anonymous Overflow
+    categories: [development]
+    icon: anonymousoverflow
+    color: green
+    link: https://github.com/httpjamesm/AnonymousOverflow
+    current-maintainers: [*ImenaOphelia]
   arch-wiki:
     name: Arch Wiki
     link: https://wiki.archlinux.org
