--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -112,8 +112,7 @@ userstyles:
     current-maintainers: [*AnubisNekhet]
   anonymous-overflow:
     name: Anonymous Overflow
-    categories: [development]
-    icon: anonymousoverflow
+    categories: [wiki, development]
     color: green
     link: https://github.com/httpjamesm/AnonymousOverflow
     current-maintainers: [*ImenaOphelia]
