--- a/deno.json
+++ b/deno.json
@@ -3,7 +3,7 @@
     "@/": "./scripts/",
     "@actions/core": "npm:@actions/core@1.11.1",
     "@catppuccin/catppuccin/": "https://raw.githubusercontent.com/catppuccin/catppuccin/d4f82739e687cfd19d168be355367fdbbcc8e029/",
-    "@catppuccin/palette": "npm:@catppuccin/palette@^1.7.1",
+    "@catppuccin/palette/": "https://raw.githubusercontent.com/catppuccin/palette/feat%2Fgenerate-tints-and-shades/",
     "@octokit/rest": "npm:@octokit/rest@^21.0.2",
     "@std/assert": "jsr:@std/assert@^1.0.9",
     "@std/cli": "jsr:@std/cli@^1.0.8",
