Initial commit for manpages. Also fix up arch wiki guidance.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

Fix issues.
Now I just need to sort out the fmt issues. We can't split regexp onto multiple lines or it breaks the usercss in stylus, which is unfortunate.

Signed-off-by: Toria <ninetailedtori@uwu.gal>

This fixes a few things - firstly, this style only works on Arch's manpage. Perhaps it's worth generating its own category, and including ALL manpage supports, but we could actually do it all under one thing.

Signed-off-by: Toria <ninetailedtori@uwu.gal>

Let's do this with a major rework.
Let's add support to all manpages to this one file, to keep it neat and organised.

Signed-off-by: Toria <ninetailedtori@uwu.gal>

Rework - let's do a rework to include it all under an archlinux category!

Signed-off-by: Toria <ninetailedtori@uwu.gal>

Rework wiki theme to fit mediawiki. This requires: #1866. manpage for arch has been finalized and perfected.

Signed-off-by: Toria <ninetailedtori@uwu.gal>

Remove README (this is autogenerated, no need to move.)

Signed-off-by: Toria <ninetailedtori@uwu.gal>

Initial merge of PR #1870.
Being edited by me, don't mind the state of it rn, feel free to report bugs to me!

Signed-off-by: Toria <ninetailedtori@uwu.gal>

Cleanup!
Simplify some of the css, reformat.

Signed-off-by: Toria <ninetailedtori@uwu.gal>

Whoops, typo!

Signed-off-by: Toria <ninetailedtori@uwu.gal>

Move generics into global domain changes.
Fix unnecessary redefinitions.

Signed-off-by: Toria <ninetailedtori@uwu.gal>

Push a few changes to table colouring. Accidentally typo'd a change.

Signed-off-by: Toria <ninetailedtori@uwu.gal>

Big rework electric booga2
Move label, fix some bugs of overwriting, still needs some table and heading definitions to move as well. I *should've* fixed most things, but oh well.
Also, border-color: surface0 -> surface2 now!

Signed-off-by: Toria <ninetailedtori@uwu.gal>

Veeeeeeery big update, working on EVERYTHING!!!

Signed-of

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -70,6 +70,8 @@ collaborators:
   - &zenoix zenoix
   - &NekoDrone NekoDrone
   - &adamperkowski adamperkowski
+  - &ninetailedtori ninetailedtori
+  - &opensourcecheemsburgers opensourcecheemsburgers
 
 userstyles:
   advent-of-code:
@@ -109,14 +111,14 @@ userstyles:
         name: AniChart
         link: https://anichart.net
     current-maintainers: [*AnubisNekhet]
-  arch-wiki:
-    name: Arch Wiki
-    link: https://wiki.archlinux.org
-    categories: [wiki]
+  archlinux:
+    name: Arch Linux
+    link: https://archlinux.org
+    categories: [development, package_registry, wiki]
     icon: archlinux
     color: blue
-    note: "Make sure to use the default **Light** theme."
-    current-maintainers: []
+    note: "Make sure to use the default **Light** theme, and hide Appearance tab from sidebar."
+    current-maintainers: [*ninetailedtori, *opensourcecheemsburgers]
     past-maintainers: [*GenShibe]
   boringproxy:
     name: boringproxy
