fix: icon color
Co-authored-by: uncenter <uncenter@uncenter.dev>

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -208,7 +208,7 @@ userstyles:
     link: https://codeforces.com
     categories: [education, discussion_forum]
     icon: codeforces
-    color: text
+    color: blue
     current-maintainers: [*ChakornK]
   crates.io:
     name: crates.io
