feat(figma): init

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -285,6 +285,12 @@ userstyles:
     categories: [social_networking]
     color: peach
     current-maintainers: [*ryanccn]
+  figma:
+    name: Figma
+    link: https://figma.com
+    categories: [development_tools, productivity]
+    color: pink
+    current-maintainers: [*WalkQuackBack]
   freedesktop:
     name: freedesktop.org
     link: https://www.freedesktop.org
