fix(figma): category name

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -288,7 +288,7 @@ userstyles:
   figma:
     name: Figma
     link: https://figma.com
-    categories: [development_tools, productivity]
+    categories: [development, productivity]
     color: pink
     current-maintainers: [*WalkQuackBack]
   freedesktop:
