chore(userstyles.yml): add WalkQuackBack as maintainer to mydramalist

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -618,7 +618,7 @@ userstyles:
     link: https://mydramalist.com/
     categories: [news_and_journalism]
     color: blue
-    current-maintainers: []
+    current-maintainers: [*WalkQuackBack]
   namemc:
     name: NameMC
     link: https://namemc.com
