--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -151,7 +151,8 @@ userstyles:
     name: Bilibili
     link: https://bilibili.com
     categories: [entertainment, social_networking, photo_and_video]
-    color: pink
+	icon: bilibili
+    color: sapphire
     current-maintainers: [*sixuan911]
   canvas-lms:
     name: Canvas LMS
