--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -70,6 +70,7 @@ collaborators:
   - &zenoix zenoix
   - &NekoDrone NekoDrone
   - &adamperkowski adamperkowski
+  - &TheAnonymousCrusher TheAnonymousCrusher
 
 userstyles:
   advent-of-code:
@@ -731,6 +732,12 @@ userstyles:
     categories: [game]
     color: green
     current-maintainers: [*Nyameliaaaa]
+  poe:
+    name: poe
+    link: https://poe.com
+    categories: [artificial_intelligence]
+    color: pink
+    current-maintainers: [*TheAnonymousCrusher]
   porkbun:
     name: Porkbun
     link: https://porkbun.com
