--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -736,7 +736,8 @@ userstyles:
     name: poe
     link: https://poe.com
     categories: [artificial_intelligence]
-    color: pink
+	icon: poe
+    color: blue
     current-maintainers: [*TheAnonymousCrusher]
   porkbun:
     name: Porkbun
