--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -733,7 +733,7 @@ userstyles:
     color: green
     current-maintainers: [*Nyameliaaaa]
   poe:
-    name: poe
+    name: Poe
     link: https://poe.com
     categories: [artificial_intelligence]
 	icon: poe
