Change inline code bg to surface0. Add in unimplemented values. Comment EVERYTHING in wiki section. Refactor archlinux -> arch-linux.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -111,7 +111,7 @@ userstyles:
         name: AniChart
         link: https://anichart.net
     current-maintainers: [*AnubisNekhet]
-  archlinux:
+  arch-linux:
     name: Arch Linux
     link: https://archlinux.org
     categories: [development, package_registry, wiki]
