--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -732,13 +732,6 @@ userstyles:
     categories: [game]
     color: green
     current-maintainers: [*Nyameliaaaa]
-  poe:
-    name: Poe
-    link: https://poe.com
-    categories: [artificial_intelligence]
-    icon: poe
-    color: blue
-    current-maintainers: [*TheAnonymousCrusher]
   porkbun:
     name: Porkbun
     link: https://porkbun.com
@@ -993,6 +986,12 @@ userstyles:
     color: red
     current-maintainers: [*isabelroses, *uncenter]
     past-maintainers: [*elkrien]
+  zelda-dungeon:
+    name: Zelda Dungeon
+    link: https://zeldadungeon.net
+    categories: [game]
+    color: yellow
+    current-maintainers: [*TheAnonymousCrusher]
   zen-browser-docs:
     name: Zen Browser Docs
     link: https://zen-browser.app
