feat(zeldadungeon): init

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -985,6 +985,12 @@ userstyles:
     color: red
     current-maintainers: [*isabelroses, *uncenter]
     past-maintainers: [*elkrien]
+  zelda-dungeon:
+    name: Zelda Dungeon
+    link: https://zeldadungeon.net
+    categories: [game]
+    color: yellow
+    current-maintainers: [*TheAnonymousCrusher]
   zen-browser-docs:
     name: Zen Browser Docs
     link: https://zen-browser.app
