chore(anonymous-overflow): update categories
Co-authored-by: WalkQuackBack <quacksareback@duck.com>

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -112,7 +112,7 @@ userstyles:
     current-maintainers: [*AnubisNekhet]
   anonymous-overflow:
     name: Anonymous Overflow
-    categories: [wiki, development]
+    categories: [discussion_forum, wiki]
     color: green
     link: https://github.com/httpjamesm/AnonymousOverflow
     current-maintainers: [*ImenaOphelia]
