fix(zelda-dungeon): added TheAnonymousCrusher under collaborators

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -70,6 +70,7 @@ collaborators:
   - &zenoix zenoix
   - &NekoDrone NekoDrone
   - &adamperkowski adamperkowski
+  - &TheAnonymousCrusher TheAnonymousCrusher
 
 userstyles:
   advent-of-code:
