feat(poe): init (#2069)
* Add files via upload

* Update styles/poe/catppuccin.user.less

Change 'poe' to 'Poe'

Co-authored-by: WalkQuackBack <quacksareback@duck.com>

* Update styles/poe/catppuccin.user.less

Change 'poe' to 'Pow'

Co-authored-by: WalkQuackBack <quacksareback@duck.com>

* Update scripts/userstyles.yml

Co-authored-by: uncenter <uncenter@uncenter.dev>

* Update scripts/userstyles.yml

Co-authored-by: uncenter <uncenter@uncenter.dev>

* Remove variable that are defined in standard lib

Co-authored-by: uncenter <uncenter@uncenter.dev>

* Fix indentation in scripts/userstyles.yml

* fix(poe): indentation

* chore(poe): delete extra file

* Update styles/poe/catppuccin.user.less

Co-authored-by: uncenter <uncenter@uncenter.dev>

* Update styles/poe/catppuccin.user.less

Co-authored-by: uncenter <uncenter@uncenter.dev>

* Update catppuccin.user.less

* Remove prism.js like syntax

* Change to CSS variables

Co-authored-by: uncenter <uncenter@uncenter.dev>

* fix(poe): settings, tooltips, codes, misc

* Update styles/poe/catppuccin.user.less

Co-authored-by: WalkQuackBack <quacksareback@duck.com>

* Update catppuccin.user.less

* Change 'Tooltip_root' BG to surface0 to show elevation

* fix(poe): use variable instead

* feat(poe): logo, ignore help center, api section

* fix(poe): optimize logo svg

* fix(poe): login gradient, add comment about url-prefix

---------

Co-authored-by: WalkQuackBack <quacksareback@duck.com>
Co-authored-by: uncenter <uncenter@uncenter.dev>

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -70,6 +70,7 @@ collaborators:
   - &zenoix zenoix
   - &NekoDrone NekoDrone
   - &adamperkowski adamperkowski
+  - &TheAnonymousCrusher TheAnonymousCrusher
 
 userstyles:
   advent-of-code:
@@ -731,6 +732,13 @@ userstyles:
     categories: [game]
     color: green
     current-maintainers: [*Nyameliaaaa]
+  poe:
+    name: Poe
+    link: https://poe.com
+    categories: [artificial_intelligence]
+    icon: poe
+    color: blue
+    current-maintainers: [*TheAnonymousCrusher]
   porkbun:
     name: Porkbun
     link: https://porkbun.com
