chore(formative): remove `r58Playz` as maintainer

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -298,7 +298,8 @@ userstyles:
     link: https://app.formative.com/home
     categories: [education]
     color: blue
-    current-maintainers: [*r58Playz]
+    current-maintainers: []
+    past-maintainers: [*r58Playz]
   ghostty.org:
     name: Ghostty.org
     link: https://ghostty.org
