chore: update adamperkowski username

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -69,7 +69,7 @@ collaborators:
   - &shnjd shnjd
   - &zenoix zenoix
   - &NekoDrone NekoDrone
-  - &adamperkowski adamperkowski
+  - &koibtw koibtw
   - &TheAnonymousCrusher TheAnonymousCrusher
 
 userstyles:
@@ -821,7 +821,7 @@ userstyles:
     link: https://searchix.ovh
     categories: [development, search_engine]
     color: blue
-    current-maintainers: [*adamperkowski]
+    current-maintainers: [*koibtw]
   searxng:
     name: SearXNG
     link: https://github.com/searxng/searxng
