--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -867,7 +867,7 @@ userstyles:
     link: https://startpage.com
     categories: [search_engine]
     color: lavender
-    current-maintainers: []
+    current-maintainers: [*WalkQuackBack]
     past-maintainers: [*bartlibert]
   status.cafe:
     name: status.cafe
