feat(regex101): init (#1188)
Co-authored-by: WalkQuackBack <quacksareback@duck.com>

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -810,6 +810,12 @@ userstyles:
     icon: reddit
     current-maintainers: []
     past-maintainers: [*jayylmao, *rubyowo]
+  regex101:
+    name: regex101
+    link: https://regex101.com
+    categories: [development]
+    color: blue
+    current-maintainers: [*uncenter]
   rentry.co:
     name: Rentry.co
     link: https://rentry.co
