feat(anonymous-overflow): init (#1564)
Co-authored-by: WalkQuackBack <quacksareback@duck.com>
Co-authored-by: uncenter <uncenter@uncenter.dev>

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -69,6 +69,8 @@ collaborators:
   - &shnjd shnjd
   - &zenoix zenoix
   - &NekoDrone NekoDrone
+  - &adamperkowski adamperkowski
+  - &ImenaOphelia ImenaOphelia
   - &koibtw koibtw
   - &TheAnonymousCrusher TheAnonymousCrusher
 
@@ -110,6 +112,12 @@ userstyles:
         name: AniChart
         link: https://anichart.net
     current-maintainers: [*AnubisNekhet]
+  anonymous-overflow:
+    name: Anonymous Overflow
+    categories: [discussion_forum, wiki]
+    color: green
+    link: https://github.com/httpjamesm/AnonymousOverflow
+    current-maintainers: [*ImenaOphelia]
   arch-wiki:
     name: Arch Wiki
     link: https://wiki.archlinux.org
