fix(youtube): fix shorts navigation bar background

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -73,6 +73,7 @@ collaborators:
   - &ImenaOphelia ImenaOphelia
   - &koibtw koibtw
   - &TheAnonymousCrusher TheAnonymousCrusher
+  - &scarcekoi scarcekoi
 
 userstyles:
   advent-of-code:
