--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -73,6 +73,7 @@ collaborators:
   - &ImenaOphelia ImenaOphelia
   - &koibtw koibtw
   - &TheAnonymousCrusher TheAnonymousCrusher
+  - &scarcekoi scarcekoi
 
 userstyles:
   advent-of-code:
@@ -308,6 +309,12 @@ userstyles:
     color: blue
     current-maintainers: []
     past-maintainers: [*r58Playz]
+  galileo:
+    name: GALILEO
+    link: https://galileo.usg.edu
+    categories: [education]
+    color: teal
+    current-maintainers: [*scarcekoi]
   ghostty.org:
     name: Ghostty.org
     link: https://ghostty.org
