Add to userstyle, move some stuff around, now to actually work on it!
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -73,6 +73,7 @@ collaborators:
   - &ImenaOphelia ImenaOphelia
   - &koibtw koibtw
   - &TheAnonymousCrusher TheAnonymousCrusher
+  - &ninetailedtori ninetailedtori
 
 userstyles:
   advent-of-code:
@@ -314,6 +315,13 @@ userstyles:
     categories: [terminal]
     color: blue
     current-maintainers: [*uncenter]
+  git-scm:
+    name: Git SCM
+    link: https://git-scm.com
+    categories: [development, productivity]
+    icon: git
+    color: peach
+    current-maintainers: [*ninetailedtori]
   github:
     name: GitHub
     link: https://github.com
