fix(userstyles.yml): include pahe.win support

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -118,6 +118,10 @@ userstyles:
     categories: [entertainment]
     icon: animepahe
     color: pink
+    supports:
+      anichart:
+        name: Pahe Win
+        link: https://pahe.win
     current-maintainers: [*TheAnonymousCrusher]
   anonymous-overflow:
     name: Anonymous Overflow
