docs: split into topic tabs

--- a/docs/package.json
+++ b/docs/package.json
@@ -22,6 +22,7 @@
     "starlight-github-alerts": "^0.1.0",
     "starlight-image-zoom": "^0.13.0",
     "starlight-links-validator": "^0.18.0",
+    "starlight-sidebar-topics": "^0.6.2",
     "yaml": "^2.8.1"
   }
 }
