feat(17track): update name

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -78,7 +78,7 @@ collaborators:
 
 userstyles:
   17track:
-    name: 17track
+    name: 17TRACK
     link: https://17track.net
     categories: [productivity]
     color: blue
