feat(kubernetes): add Catppuccin theme for Kubernetes

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -512,6 +512,13 @@ userstyles:
     categories: [development]
     color: mauve
     current-maintainers: [*uncenter]
+  kubernetes:
+    name: Kubernetes
+    link: https://kubernetes.io
+    categories: [development, documentation]
+    icon: kubernetes
+    color: blue
+    current-maintainers: []
   lastfm:
     name: Last.fm
     link: https://last.fm
