Pushing vgen vsona theme start.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -74,6 +74,7 @@ collaborators:
   - &ImenaOphelia ImenaOphelia
   - &koibtw koibtw
   - &TheAnonymousCrusher TheAnonymousCrusher
+  - &ninetailedtori ninetailedtori
 
 userstyles:
   advent-of-code:
@@ -974,6 +975,17 @@ userstyles:
         name: Next.js
         link: https://nextjs.org
     current-maintainers: [*ryanccn, *Dandraghas]
+  vgen:
+    name: VGen
+    link: https://vgen.co
+    categories: [productivity]
+    icon: vgen
+    color: green
+    supports:
+      vsona:
+        name: VSona
+        link: https://vsona.co
+    current-maintainers: [*ninetailedtori]
   vikunja:
     name: Vikunja
     link: https://vikunja.io
