fix(lint css with deno)

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -515,7 +515,7 @@ userstyles:
   kubernetes:
     name: Kubernetes
     link: https://kubernetes.io
-    categories: [development, documentation]
+    categories: [development, documentation_generator]
     icon: kubernetes
     color: blue
     current-maintainers: []
