feat(ixl): init

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -494,6 +494,12 @@ userstyles:
     categories: [artificial_intelligence, productivity]
     color: yellow
     current-maintainers: [*ryanccn]
+  ixl:
+    name: IXL
+    link: https://www.ixl.com
+    categories: [education]
+    color: green
+    current-maintainers: [*scarcekoi]
   jisho:
     name: Jisho
     link: https://jisho.org
