--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -513,6 +513,13 @@ userstyles:
     categories: [development]
     color: mauve
     current-maintainers: [*uncenter]
+  kubernetes:
+    name: Kubernetes
+    link: https://kubernetes.io
+    categories: [development, documentation_generator]
+    icon: kubernetes
+    color: blue
+    current-maintainers: []
   lastfm:
     name: Last.fm
     link: https://last.fm
