renamed from copilot to microsoft-copilot

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -203,12 +203,6 @@ userstyles:
     categories: [productivity, photo_and_video]
     color: text
     current-maintainers: [*kerichdev]
-  copilot:
-    name: Copilot
-    link: https://copilot.microsoft.com
-    categories: [artificial_intelligence, productivity, development]
-    color: mauve
-    current-maintainers: [*ruiiiijiiiiang]
   crates.io:
     name: crates.io
     link: https://crates.io
@@ -600,6 +594,12 @@ userstyles:
     icon: modrinth
     color: green
     current-maintainers: [*thismoon]
+  microsoft-copilot:
+    name: Microsoft Copilot
+    link: https://copilot.microsoft.com
+    categories: [artificial_intelligence, productivity]
+    color: mauve
+    current-maintainers: [*ruiiiijiiiiang]
   microsoft-word:
     name: Microsoft Word
     link: https://office.com
