--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -699,6 +699,13 @@ userstyles:
     icon: openmediavault
     color: sky
     current-maintainers: [*Gandalf-the-Blue]
+  openstreetmap:
+    name: OpenStreetMap
+    link: https://openstreetmap.org
+    categories: [productivity]
+    icon: openstreetmap
+    color: green
+    current-maintainers: [*scarcekoi]
   paste.rs:
     name: paste.rs
     link: https://paste.rs
