Refactor rbx-devforum to general discourse theme. Subject to changes, there's still a bit that has to be done: - do we theme categories?   - category badges are all specific to the site, so it is likely impossible to do this, especially lightly. - if we make a library, this *might* be easier   - especially if we make an official port, this would allow site admins to port it over cleanly on their own upstream sites.   - even so, making a lib is quite useful, for our own userstyles. something like gitea or our upstream syntax libs or mediawiki lib, for example, where we can simply include it and have the discourse variables set.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -68,6 +68,7 @@ collaborators:
   - &shnjd shnjd
   - &zenoix zenoix
   - &NekoDrone NekoDrone
+  - &ninetailedtori ninetailedtori
 
 userstyles:
   advent-of-code:
@@ -235,6 +236,17 @@ userstyles:
     categories: [development, wiki]
     color: text
     current-maintainers: [*ashish0kumar]
+  discourse:
+    name: Discourse
+    link: https://www.discourse.org/
+    categories: [discussion_forum]
+    icon: robloxstudio
+    color: blue
+    supports:
+      roblox-devforum:
+        name: Roblox DevForum
+        link: https://devforum.roblox.com
+    current-maintainers: [*WalkQuackBack, *ninetailedtori]
   docs.deno.com:
     name: docs.deno.com
     link: https://docs.deno.com
@@ -791,13 +803,6 @@ userstyles:
     categories: [productivity]
     color: text
     current-maintainers: [*thismoon]
-  roblox-devforum:
-    name: Roblox DevForum
-    link: https://devforum.roblox.com
-    categories: [discussion_forum]
-    icon: robloxstudio
-    color: blue
-    current-maintainers: [*WalkQuackBack]
   searxng:
     name: SearXNG
     link: https://github.com/searxng/searxng
