--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -74,6 +74,7 @@ collaborators:
   - &ImenaOphelia ImenaOphelia
   - &koibtw koibtw
   - &TheAnonymousCrusher TheAnonymousCrusher
+  - &scarcekoi scarcekoi
 
 userstyles:
   advent-of-code:
@@ -756,6 +757,12 @@ userstyles:
     icon: porkbun
     color: pink
     current-maintainers: [*uncenter]
+  progress-learning:
+    name: Progress Learning
+    link: https://progresslearning.com
+    categories: [education]
+    color: mauve
+    current-maintainers: [*scarcekoi]
   pronouns.cc:
     name: pronouns.cc
     link: https://pronouns.cc
