--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -925,6 +925,12 @@ userstyles:
     categories: [discussion_forum, social_networking]
     color: text
     current-maintainers: [*Guaxinim5573]
+  thestorygraph:
+    name: The Story Graph
+    link: https://thestorygraph.com
+    categories: [productivity, social_networking]
+    color: blue
+    current-maintainers: [*scarcekoi]
   tldraw:
     name: tldraw
     link: https://www.tldraw.com
