test(google); expand scraping stuffs

--- a/styles/google/scripts/deno.json
+++ b/styles/google/scripts/deno.json
@@ -1,7 +1,10 @@
 {
   "imports": {
     "@/": "./",
+    "@std/path": "jsr:@std/path@^1.1.4",
+    "@types/user-agents": "npm:@types/user-agents@^1.0.4",
     "color": "npm:color@^5.0.3",
+    "lightningcss": "npm:lightningcss-wasm@^1.31.1",
     "playwright": "npm:playwright@1.56.0",
     "user-agents": "npm:user-agents@^1.1.669"
   },
