Add tumblr-web userstyle

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -74,6 +74,7 @@ collaborators:
   - &ImenaOphelia ImenaOphelia
   - &koibtw koibtw
   - &TheAnonymousCrusher TheAnonymousCrusher
+  - &Luna-Terra-CG Luna-Terra-CG
 
 userstyles:
   advent-of-code:
@@ -940,6 +941,12 @@ userstyles:
     categories: [development]
     color: blue
     current-maintainers: [*trinkey]
+  tumblr-web:
+    name: Tumblr Web
+    link: https://tumblr.com
+    categories: [social_networking]
+    color: blue
+    current-maintainers: [*Luna-Terra-CG]
   tuta:
     name: Tuta
     link: https://tuta.com
