--- a/.github/ISSUE_TEMPLATE/userstyle.yml
+++ b/.github/ISSUE_TEMPLATE/userstyle.yml
@@ -7,8 +7,6 @@ body:
       label: Is there an existing issue outlining your problem?
       description: Please search to see if an issue already exists for your problem.
       options:
-        - label: I am using the latest version of the userstyle.
-          required: true
         - label: I have searched the existing issues and they do not solve my problem.
           required: true
   - type: dropdown
@@ -33,8 +31,21 @@ body:
   - type: input
     attributes:
       label: What browser(s) are you seeing the problem on?
-      description: "Make sure to include the browser version - see https://userstyles.catppuccin.com/reference/browsers/ for instructions."
+      description: "Make sure to include the version of the browser. Consult https://userstyles.catppuccin.com/reference/browsers/ for further instructions."
       placeholder: Firefox v112.0.2
+    validations:
+      required: true
+  - type: input
+    attributes:
+      label: What version of the Stylus extension does your browser have installed?
+      placeholder: Stylus 2.3.17
+    validations:
+      required: true
+  - type: input
+    attributes:
+      label: What version of this Catppuccin userstyle does Stylus have installed?
+      description: Versions are listed on Stylus's manage page — click on the Stylus extension icon to open the extension popup, and then click the "Manage" button in the bottom left. In the page that opens, the version number will be listed next to the userstyle name.
+      placeholder: v2025.12.05
     validations:
       required: true
   - type: textarea
