--- a/.github/ISSUE_TEMPLATE/userstyle.yml
+++ b/.github/ISSUE_TEMPLATE/userstyle.yml
@@ -30,21 +30,21 @@ body:
       description: If applicable, attach screenshots which clearly highlight the issue.
   - type: input
     attributes:
-      label: What browser(s) are you seeing the problem on?
-      description: "Make sure to include the version of the browser. Consult https://userstyles.catppuccin.com/reference/browsers/ for further instructions."
+      label: Browser versions this issue occurs on
+      description: "To get the browser version, see https://userstyles.catppuccin.com/reference/browsers."
       placeholder: Firefox v112.0.2
     validations:
       required: true
   - type: input
     attributes:
-      label: What version of the Stylus extension does your browser have installed?
+      label: Stylus extension version
       placeholder: Stylus 2.3.17
     validations:
       required: true
   - type: input
     attributes:
       label: What version of this Catppuccin userstyle does Stylus have installed?
-      description: Versions are listed on Stylus's manage page — click on the Stylus extension icon to open the extension popup, and then click the "Manage" button in the bottom left. In the page that opens, the version number will be listed next to the userstyle name.
+      description: Versions are listed on Stylus' Manage page. To get the version, click the Stylus extension icon, then in the popup, click Manage. The version is found beside the name of the userstyle.
       placeholder: v2025.12.05
     validations:
       required: true
