fix(ISSUE_TEMPLATE): add (s) to browser version description
Co-authored-by: uncenter <uncenter@uncenter.dev>

--- a/.github/ISSUE_TEMPLATE/userstyle.yml
+++ b/.github/ISSUE_TEMPLATE/userstyle.yml
@@ -30,7 +30,7 @@ body:
       description: If applicable, attach screenshots which clearly highlight the issue.
   - type: input
     attributes:
-      label: Browser versions this issue occurs on
+      label: Browser version(s) this issue occurs on
       description: "To get the browser version, see https://userstyles.catppuccin.com/reference/browsers."
       placeholder: Firefox v112.0.2
     validations:
