--- a/.github/ISSUE_TEMPLATE/userstyle.yml
+++ b/.github/ISSUE_TEMPLATE/userstyle.yml
@@ -38,6 +38,7 @@ body:
   - type: input
     attributes:
       label: Stylus extension version
+	  description: If Stylus is pinned, right-click the extension icon and select "Manage Extension". Otherwise, in the extensions popup, click the settings icon or three dots icon if present and select "Manage Extension". The version is displayed on the resulting page.
       placeholder: Stylus 2.3.17
     validations:
       required: true
