chore: catppuccin userstyle version label
Co-authored-by: WalkQuackBack <quacksareback@duck.com>

--- a/.github/ISSUE_TEMPLATE/userstyle.yml
+++ b/.github/ISSUE_TEMPLATE/userstyle.yml
@@ -44,7 +44,7 @@ body:
       required: true
   - type: input
     attributes:
-      label: What version of this Catppuccin userstyle does Stylus have installed?
+      label: Installed version of the userstyle
       description: Versions are listed on Stylus' Manage page. To get the version, click the Stylus extension icon, then in the popup, click Manage. The version is found beside the name of the userstyle.
       placeholder: v2025.12.05
     validations:
