fix: add to userstyles.yml

--- a/scripts/userstyles.yml
+++ b/scripts/userstyles.yml
@@ -74,6 +74,7 @@ collaborators:
   - &ImenaOphelia ImenaOphelia
   - &koibtw koibtw
   - &TheAnonymousCrusher TheAnonymousCrusher
+  - &scarcekoi scarcekoi
 
 userstyles:
   advent-of-code:
@@ -295,6 +296,12 @@ userstyles:
     categories: [social_networking]
     color: peach
     current-maintainers: [*ryanccn]
+  example:
+    name: Example
+    link: https://example.com
+    categories: [productivity]
+    color: text
+    current-maintainers: [*scarcekoi]
   freedesktop:
     name: freedesktop.org
     link: https://www.freedesktop.org
